--- a/index.html
+++ b/index.html
@@ -1,28 +1,23 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>C85</title>
-
+	<title>MasterRangers</title>
 <link rel="stylesheet" href="style.css">
-
 <script src="fabric.js"></script>
+
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
 
-<body class="body_background">
+</head>
 
+<body class="body_backgorund">
 	<center>
-
-	<h2 class="btn-primary">MASTER RANGERS</h2>
-
-	<div id="head_info" class="btn-danger">
-		<h3>Press r,g,y,p,b to upload Master Rangers<span id="masterrangers"></span> </h3>
-		
-	</div>
-	<canvas id="myCanvas" width="1000" height="600"></canvas>
+		<h3><i>Press <b>r, g, y, p, b</b> to upload &nbsp;</i> Master Rangers</h3>
+							
+		<!---Create Canvas--->
 
 	</center>
 	<script src="main.js"></script>
